fix: updating coral tag label to word wrap (#177)

--- a/coral-component-taglist/src/styles/index.styl
+++ b/coral-component-taglist/src/styles/index.styl
@@ -36,6 +36,10 @@
   margin: calc(var(--spectrum-medium-taggroup-tag-gap-x) / 2);
 }
 
+._coral-Tags-itemLabel {
+  white-space: normal;
+}
+
 @require 'light';
 @require 'lightest';
 @require 'dark';
